# Dice-Similarity-Index-by-Slice

./: CMakeLists.txt  README.md  slice_dice.cxx  slice_dice_mirtk.cxx
tools/: CMakeLists.txt  evaluate-slice-dice.cc
